# nlp-consumer-feedback-analysis

./: .gitignore  README.md  main.py  plan.md  pyproject.toml
documents/: main.tex
documents/chapters/: 1_introduction.tex
documents/cover/: cover_page.tex  task_description.tex
documents/styles/: main.sty
scripts/: setup_project.py
