[project]
name = "nlp-consumer-feedback-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bokeh>=3.9.0",
    "en-core-web-sm",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "nltk>=3.9.4",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "spacy>=3.8.13",
    "textblob>=0.20.0",
    "tqdm>=4.67.3",
    "wordcloud>=1.9.6",
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
